set(frontend_test_targets frontend_lexer_tests frontend_parser_tests frontend_hir_lookup_tests)
if(ENABLE_C4C_BACKEND)
  list(APPEND frontend_test_targets frontend_hir_tests)
endif()

foreach(target IN LISTS frontend_test_targets)
  add_executable(${target} "${CMAKE_CURRENT_SOURCE_DIR}/${target}.cpp")
  target_link_libraries(${target} PRIVATE c4c_frontend)
  set_target_properties(${target} PROPERTIES CXX_STANDARD 17 CXX_STANDARD_REQUIRED ON)
endforeach()

if(ENABLE_C4C_BACKEND)
  target_link_libraries(frontend_hir_tests PRIVATE c4c_codegen c4c_backend)
  add_test(NAME frontend_hir_tests    COMMAND frontend_hir_tests)
  set_tests_properties(frontend_hir_tests PROPERTIES LABELS "internal;hir")
endif()

add_test(NAME frontend_lexer_tests  COMMAND frontend_lexer_tests)
add_test(NAME frontend_parser_tests COMMAND frontend_parser_tests)
add_test(NAME frontend_hir_lookup_tests COMMAND frontend_hir_lookup_tests)
set_tests_properties(frontend_lexer_tests  PROPERTIES LABELS "internal;lex")
set_tests_properties(frontend_parser_tests PROPERTIES LABELS "internal;parse")
set_tests_properties(frontend_hir_lookup_tests PROPERTIES LABELS "internal;hir")
